syntax = "proto3";

package user;

option go_package = "user-service/proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string email = 2;
  string name = 3;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
  string user_id = 2;
  string token = 3;
}